--- a/citation_style.cls
+++ b/citation_style.cls
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <style xmlns="http://purl.org/net/xbiblio/csl" class="in-text" version="1.0" demote-non-dropping-particle="sort-only" default-locale="en-US">
   <info>
-    <title>Laser &amp; Photonics Reviews - Benjamin Maclellan</title>
-    <id>https://csl.mendeley.com/styles/456765651/laser-and-photonics-reviews-lpr-bm</id>
+    <title>Laser &amp; Photonics Reviews</title>
+    <id>http://www.zotero.org/styles/laser-and-photonics-reviews</id>
     <link href="http://www.zotero.org/styles/laser-and-photonics-reviews" rel="self"/>
     <link href="http://www.zotero.org/styles/springer-physics-brackets" rel="template"/>
     <link href="http://onlinelibrary.wiley.com/journal/10.1002/(ISSN)1863-8899/homepage/2414_Author_Guidelines.html" rel="documentation"/>
-    <contributor>
-      <name>Benjamin Maclellan</name>
-      <uri>https://www.mendeley.com/profiles/benjamin-maclellan/</uri>
-    </contributor>
+    <author>
+      <name>Patrick O'Brien</name>
+      <email>obrienpat86@gmail.com</email>
+    </author>
     <category citation-format="numeric"/>
     <category field="physics"/>
     <issn>1863-8880</issn>
     <eissn>1863-8899</eissn>
-    <updated>2020-11-18T22:09:11+00:00</updated>
+    <updated>2017-12-16T12:29:00+00:00</updated>
     <rights license="http://creativecommons.org/licenses/by-sa/3.0/">This work is licensed under a Creative Commons Attribution-ShareAlike 3.0 License</rights>
   </info>
   <macro name="author">
@@ -83,8 +83,8 @@
     <sort>
       <key variable="citation-number"/>
     </sort>
-    <layout vertical-align="sup" delimiter=",">
-      <text variable="citation-number" vertical-align="sup"/>
+    <layout vertical-align="sup" delimiter="," prefix="[" suffix="]">
+      <text variable="citation-number" vertical-align="baseline"/>
     </layout>
   </citation>
   <bibliography delimiter-precedes-last="always" entry-spacing="0">
@@ -141,11 +141,12 @@
         <else>
           <group delimiter=" ">
             <text variable="container-title" form="short" text-case="title" font-style="italic"/>
-            <text macro="year-date" font-weight="bold" suffix=","/>
-            <group delimiter=" "/>
             <group delimiter=", ">
-              <text variable="volume" font-style="italic" font-weight="normal" suffix=","/>
-              <text variable="page" form="short"/>
+              <text variable="volume" font-weight="bold"/>
+              <group delimiter=" ">
+                <text variable="page" form="short"/>
+                <text macro="year-date" prefix="(" suffix=")"/>
+              </group>
             </group>
           </group>
         </else>
